# AetherLynxSDK

./: README.md
agent_system/: Cargo.toml
agent_system/src/: controllers.rs  grpc_server.rs  integration.rs  main.rs  mod.rs
agents/: requirements.txt  student_queries_agent.py
cli/: Cargo.toml  build.rs
cli/proto/: aetherlynx.proto
cli/src/: grpc_client.rs  main.rs
kubernetes/: agent-deployment.yaml
scripts/: deploy_k8s.sh
tools/pam_ipa_project/: Cargo.toml  README.md  app.py  cliente.py  config.toml
tools/pam_ipa_project/src/: audit.rs  auth.rs  db.rs  ipa.rs  lib.rs  pam.rs
tools/vault/: Cargo.toml  README.md  README_vault.md  main.py  my_vault.db
tools/vault/src/: lib.rs
